# Vital-Ambulance

./: .gitignore  Dockerfile  README.md  SAFETY_ANALYSIS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
demo/: sample_request.json
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ResultsDisplay.jsx  VitalForm.jsx  VitalsMonitor.jsx
models/: detector_meta.json  isolation_forest.pkl  ocsvm.pkl
reports/: metrics.json  metrics_report.md
scripts/: artifact_demo.py  evaluate.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  middleware.py  models.py
src/data/: __init__.py  generator.py  validator.py
src/evaluation/: __init__.py  failure_analysis.py  metrics.py
src/models/: __init__.py  anomaly_detector.py  explainability.py  risk_scorer.py
src/pipeline/: __init__.py  predict.py  train.py
src/preprocessing/: __init__.py  artifact_detector.py  signal_quality.py
tests/: test_api.py  test_data.py  test_models.py  test_preprocessing.py
