[tool.poetry]
name = "gray-mobility-smart-ambulance"
version = "0.1.0"
description = "Explainable smart ambulance monitoring system with anomaly detection and clinical risk scoring."
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.0"
uvicorn = {extras = ["standard"], version = "0.23.2"}
pydantic = "2.8.0"
numpy = "2.4.0"
pandas = "3.0.0"
scikit-learn = "1.7.1"
shap = "0.51.0"
python-dotenv = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "7.4.0"
pytest-cov = "4.1.1"
flake8 = "7.0.0"
black = "24.3.0"
isort = "5.14.0"
mypy = "1.3.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
